# pdf-filler

./: .gitignore  AGENTS.md  DEPLOY.md  README.md  pyproject.toml  render.yaml  start.bat  test-upload.xlsx
Files/: 05E3F1D9D08DE6263D3277BFA062CB538D89D96D_ สรุปสถานะรอเริ่มงาน S-M (version 1).xlsb - Copy.xlsx
app/: AGENTS.md  config.py  main.py
app/routers/: AGENTS.md  fill.py  preview.py  template.py  upload.py  workflow.py
app/schemas/: models.py
app/services/: AGENTS.md  auto_position.py  excel_reader.py  font_loader.py  pdf_overlay.py  pdf_preview.py  template_manager.py  workflow_manager.py
app/static/: app.js  index.html  style.css
doc/: analysis.md
tests/: AGENTS.md  conftest.py  test_auto_position.py  test_excel_reader.py  test_fitz_smoke.py  test_font_loader.py  test_pdf_overlay.py  test_pdf_preview.py  test_rotation.py  test_routers.py  test_template_manager.py  test_workflow_manager.py
